--- a/react-complete-guide/package.json
+++ b/react-complete-guide/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -10,7 +11,6 @@
     "babel-loader": "^8.2.1",
     "babel-preset-react-app": "^3.1.2",
     "babel-runtime": "6.26.0",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
@@ -27,6 +27,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "install": "^0.13.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -85,16 +86,15 @@
     ]
   },
   "babel": {
-   
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
-  ],
-  "plugins": [
+    ],
+    "plugins": [
       [
         "@babel/plugin-proposal-class-properties"
       ]
-  ]
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
