--- a/webpack-tuts/package.json
+++ b/webpack-tuts/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "webpack-tuts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "webpack": "^5.21.2",
-    "webpack-dev-server": "^3.11.2"
-  }
+    "name": "webpack-tuts",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack-dev-server"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "webpack": "^5.21.2",
+        "webpack-dev-server": "^3.11.2"
+    },
+    "dependencies": {
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-router-dom": "^5.2.0"
+    }
 }
